# RigidBody-Cube-Sphere-

./: CMakeLists.txt  README.md  graphics.cpp  graphics.h  main.cpp  mathRB.cpp  mathRB.h
Sphere/: a.out  comput.cpp  comput.h  drawing.cpp  drawing.h  main.cpp
